# gesichtool

./: CMakeLists.txt  README.md  flake.nix
src/: gesichtool.cpp  semaphore_guard.hpp
